# nes-emu-rust

./: .gitignore  Cargo.toml  README.md
nes/: Cargo.toml
nes/src/: buscpu.rs  busppu.rs  cartridge.rs  joypad.rs  lib.rs  nes.rs
nes/src/apu/: apu.rs  pulsechannel.rs  trianglechannel.rs
nes/src/cpu/: cpu.rs  decode.rs
nes/src/events/: drawevent.rs
nes/src/mappers/: cnrom.rs  gxrom.rs  mapper.rs  mmc1.rs  nrom.rs  uxrom.rs
nes/src/ppu/: ppu.rs  regcontrol.rs  regmask.rs  regstatus.rs
nes/src/tests/: cputest.rs  pputest.rs
nes_scripts/: apu_scale.nes  apu_scale.s
piston/: Cargo.toml
piston/src/: main.rs
pistonnes/: Cargo.toml
pistonnes/src/: main.rs
src/: buscpu.rs  busppu.rs  cartchr.rs  cartprg.rs  cartridge.rs  cpu.rs  joypad.rs  lib.rs  main.rs  main.rs.bak  nes.rs  ppu.rs  ram.rs  wasmnes.rs
src/cpu/: addressing.rs  cpu.rs  decode.rs  instructions.rs
src/mappers/: mapper.rs  nrom.rs
src/mem/: buscpu.rs  debugram.rs  mem.rs
src/ppu/: ppu.rs  regaddrdata.rs  regcontrol.rs  regloopy.rs  regmask.rs  regscroll.rs  regstatus.rs
src/tests/: cputest.rs  nesbench.rs  pputest.rs
wasmnes/: Cargo.toml
wasmnes/src/: wasmnes.rs
wasmnes/www/: audio-engine.js  index.html  index.js  package-lock.json  package.json
www/: index.html  index.js  package-lock.json
